﻿drkns 11.12.2015 22:58:53 +0200 - build 4471

1. 0003131: Пропадают галочки напротив отмеченных в меню "Используя кодовую страницу" кодировок

drkns 11.12.2015 22:02:06 +0200 - build 4470

1. С форума: если в строке поиска была задана только одна группа, то в строке замены следует считать метасимоволами подстроки до $1

drkns 11.12.2015 21:24:01 +0200 - build 4469

1. Падение при замене с регексами.

drkns 09.12.2015 20:28:43 +0200 - build 4468

1. debug & gcc.

2. syslog & gcc.

drkns 08.12.2015 00:25:17 +0200 - build 4467

1. Рефакторинг.

2. Еще немного на тему 4461.

shmuel 07.12.2015 21:04:04 +0200 - build 4466

1. M#3129: Несколько строк склеивается в одну

drkns 07.12.2015 21:03:09 +0200 - build 4465

1. Уточнение 4461.

drkns 04.12.2015 00:24:07 +0200 - build 4464

1. Рефакторинг.

2. Warnings.

3. GCC build fix.

drkns 01.12.2015 20:24:11 +0200 - build 4463

1. Вернём workaround для бага в kernel32::GetFinalPathNameByHandleW, потерянный в 2155.

drkns 30.11.2015 22:18:30 +0200 - build 4462

1. Рефакторинг.

2. Ukrainian translation from Vlad Lozynskyi.

drkns 27.11.2015 13:40:00 +0200 - build 4461

1. 0003124: Не восстанавливает постоянные сетевые соединения при запуске от имени другого пользователя.

drkns 26.11.2015 08:49:29 +0200 - build 4460

1. Уточнение 4459.

drkns 23.11.2015 21:40:04 +0200 - build 4459

1. Рефакторинг.

drkns 21.11.2015 02:26:19 +0200 - build 4458

1. В некотрых случаях при выделении слов в редакторе кликами мыши могло получаться несколько выделенных блоков.

shmuel 17.11.2015 14:41:37 +0200 - build 4457

1. Функция FSF.FarInputRecordToName при некоторых значениях своего первого аргумента могла
   не возвращаться, покуда не поступит ввод от консоли.

drkns 15.11.2015 11:59:17 +0200 - build 4456

1. Продолжение 4455.

drkns 15.11.2015 01:37:43 +0200 - build 4455

1. Оказывается, Far уже можно полноценно собрать в clang. Немного связанной с этим реорганизации в препроцессорных макросах.

svs 07.11.2015 00:28:32 +0300 - build 4454
