@@ -1,4 +1,8 @@
-﻿drkns 11.12.2015 22:58:53 +0200 - build 4471
+﻿drkns 12.12.2015 15:41:11 +0200 - build 4472
+
+1. С форума: Если убрать типы дисков (Ctrl-1), то не будет убирать subst диск кнопкой del.
+
+drkns 11.12.2015 22:58:53 +0200 - build 4471
 
 1. 0003131: Пропадают галочки напротив отмеченных в меню "Используя кодовую страницу" кодировок
 
